# rag-training

./: .gitignore  README.md  docker-compose.yml  docker-image.sh  pyproject.toml
ai-real-state/: pyproject.toml
ai-real-state/data/real-state/: proyectos.md
ai-real-state/embedding/: pdf-loader.ipynb
ai-real-state/notebooks/: augmented-generation.ipynb  data-chunking.ipynb  embedding.ipynb  immunology-rag.ipynb  llm-rag-augmented.ipynb
ai-real-state/notebooks/chroma_langchain_db/: chroma.sqlite3
ai-real-state/notebooks/chroma_langchain_db_txt/: chroma.sqlite3
chat-interface/: Dockerfile  pyproject.toml
chat-interface/chat_interface/: main.py
generation-server/: Dockerfile  pyproject.toml
generation-server/generation_server/: main.py  service.py
generation-server/templates/: system-hr.txt
rag/: pyproject.toml
rag/ai_real_state/: __init__.py
rag/data/real-state/: proyectos.md  proyectos.txt
rag/embedding/: cli.py  pdf-loader.ipynb  text-test.ipynb  webbase.ipynb
rag/notebooks/: chroma-client.ipynb  chroma-db.ipynb  data-transform-excel.ipynb  docling.ipynb  immunology-rag.ipynb  llm-rag-augmented.ipynb  real-state.ipynb
rag/notebooks/chroma/: chroma.sqlite3
rag/notebooks/chroma_langchain_db_txt/: chroma.sqlite3
