[project]
name = "ai-real-state"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Felipe",email = "juanfbl9307@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-openai",
    "langchain_chroma",
    "langchain_community",
    "langgraph",
    "unstructured",
    "markdown",
    "pypdf"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false
in-project = true
