[project]
name = "chat-interface"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Felipe",email = "juanfbl9307@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false
in-project = true
